css: avoid text flickering on autosubmit

--- a/public/css/module.less
+++ b/public/css/module.less
@@ -21,6 +21,12 @@ pre.disabled {
   color: @gray-light;
 }
 
+/* TODO: remove this, but autosubmit looks ugly otherwise */
+input[disabled] {
+  background: inherit;
+}
+/* END OF TODO */
+
 pre {
   background: none;
 }
